  where it does not. This definitely speeds up some operations but
  a full analysis has not been attempted.

  A few other minor changes have been made: the removal of subset and
  equiv from Swish.Utils.ListHelpers; the ordering used for RDFLabel
  values has changed; added a Monoid instance for VarBinding; added
  Ord instances for a number of containers; removed some un-needed
  constraints.

0.7.0.2:

  Swish.QName.LName now requires all characters to be ASCII. This
  avoids downstream later when trying to convert a QName to a URI.

0.7.0.1:

  URI parsing has changed slightly. The only user-visible change is that
  error messages will be slightly different, in particular when
  given an IRI in Turtle or NTriples format. Unfortunately IRIs are
  still not supported.

0.7.0.0:

  For code that uses the Swish script language, the main change is to
  import Swish rather than Swish.RDF.SwishMain, and to note that the
  other Swish.RDF.Swish* modules are now called Swish.*.

  For code that uses the graph library, the main changes are that
  Swish.RDF.RDFGraph is now called Swish.RDF.Graph, the Lit
  constructor of the RDFLabel has been split into three (Lit, LangLit,
  and TypedLit) and a new LanguageTag type introduced, local names now
  use the LName type (previously they were just Text values), and the
  parsers and formatters have renamed to Swish.RDF.Parser.* and
  Swish.RDF.Formatter.*.

  - Moved a number of modules around: generic code directly into Swish
    and the Swish.RDF.RDF* forms renamed to Swish.RDF.*. Some modules
    have been moved out of the Swish.Utils.* namespace. Generic modules
    have been placed into the Data.* namespace. The Swish.RDF.Swish
    modules have been moved to Swish.* and Swish.RDF.SwishMain has
    been removed; use Swish instead.

  - Parsing modules are now in the Swish.RDF.Parser hierarchy and
    Swish.RDF.RDFParser has been renamed to Swish.RDF.Parser.Utils.
